--- a/package.json
+++ b/package.json
@@ -11,12 +11,6 @@
     "postinstall": "cd client && yarn install"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-formidable": "^1.2.0",
-    "mongoose": "^5.7.7",
-    "nodemon": "^1.19.1",
-    "npm-run-all": "^4.1.5",
-    "uniqid": "^5.0.3"
+    "cors": "^2.8.5"
   }
 }
